Add top-level docstring to macro files

--- a/posit-bakery/posit_bakery/config/templating/macros/apt.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/apt.j2
@@ -1,3 +1,5 @@
+{# Macros for generating common apt-get commands #}
+
 {# Global options for apt-get commands #}
 {%- set global_options = "-yqq" -%}
 
