--- a/posit-bakery/posit_bakery/config/templating/macros/python.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/python.j2
@@ -1,3 +1,5 @@
+{# Macros for installing Python and generating python or pip commands #}
+
 {# Adds a build stage to build one ore more Python versions using uv
 
 :param versions: A list of Python versions to build, e.g. ["3.11", "3.12"].
