--- a/posit-bakery/posit_bakery/config/templating/macros/quarto.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/quarto.j2
@@ -1,3 +1,5 @@
+{# Macros for installing and managing Quarto #}
+
 {# The directory for an installed version of Quarto
 
 :param version: The Quarto version, e.g. "1.8.24"
