--- a/posit-bakery/test/resources/basic/test-image/template/Containerfile.ubuntu2204.jinja2
+++ b/posit-bakery/test/resources/basic/test-image/template/Containerfile.ubuntu2204.jinja2
@@ -1,22 +1,22 @@
 FROM docker.io/library/ubuntu:22.04
 LABEL org.opencontainers.image.base.name="docker.io/library/ubuntu:22.04"
 
-ADD --chmod=750 https://saipittwood.blob.core.windows.net/packages/pti /usr/local/bin/pti
-
 ### ARG declarations ###
 ARG DEBIAN_FRONTEND=noninteractive
 ARG IMAGE_VERSION="{{ Image.Version }}"
 
 ### Install Apt Packages ###
 COPY {{ Path.Version }}/deps/ubuntu2204_packages.txt /tmp/ubuntu2204_packages.txt
+RUN apt-get update -yqq && \
+    apt-get install -yqq --no-install-recommends $(cat /tmp/ubuntu2204_packages.txt) && \
+    rm -f /tmp/ubuntu2204_packages.txt && \
+    apt-get clean -yqq && \
+    rm -rf /var/lib/apt/lists/*
 {% if Image.Variant != "Minimal" -%}
 COPY {{ Path.Version }}/deps/ubuntu2204_optional_packages.txt /tmp/ubuntu2204_optional_packages.txt
+RUN apt-get update -yqq && \
+    apt-get install -yqq --no-install-recommends $(cat /tmp/ubuntu2204_optional_packages.txt) && \
+    rm -f /tmp/ubuntu2204_optional_packages.txt && \
+    apt-get clean -yqq && \
+    rm -rf /var/lib/apt/lists/*
 {%- endif %}
-RUN pti container syspkg upgrade --dist \
-    && pti container syspkg install -f /tmp/ubuntu2204_packages.txt \
-    && rm -f /tmp/ubuntu2204_packages.txt \
-    {%- if Image.Variant != "Minimal" %}
-    && pti container syspkg install -f /tmp/ubuntu2204_optional_packages.txt \
-    && rm -f /tmp/ubuntu2204_optional_packages.txt \
-    {%- endif %}
-    && pti container syspkg clean
