--- a/posit-bakery/test/resources/basic/test-image/template/Containerfile.ubuntu2204.jinja2
+++ b/posit-bakery/test/resources/basic/test-image/template/Containerfile.ubuntu2204.jinja2
@@ -19,4 +19,4 @@ RUN apt-get update -yqq && \
     rm -f /tmp/ubuntu2204_optional_packages.txt && \
     apt-get clean -yqq && \
     rm -rf /var/lib/apt/lists/*
-{%- endif %}
+{% endif -%}
