--- a/posit-bakery/posit_bakery/config/templating/macros/python.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/python.j2
@@ -105,8 +105,8 @@ rm -f {{ requirements_files | map('trim') | join(' ') }}
 {%- set versions = versions | split(",") -%}
 {%- endif -%}
 {% for version in versions -%}
-RUN {% if loop.first -%}{{ set_arch() | indent(4) }} && \
-    {% endif -%}{{ install_packages(version | trim, packages, requirements_file, clean, break_system_packages) | indent(4) }}
+RUN {{ set_arch() | indent(4) }} && \
+    {{ install_packages(version | trim, packages, requirements_file, clean, break_system_packages) | indent(4) }}
 {%- if not loop.last %}{# Handles whitespace for next RUN line if present #}
 {% endif %}
 {%- endfor %}
