--- a/posit-bakery/posit_bakery/config/templating/macros/python.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/python.j2
@@ -1,5 +1,29 @@
 {# Macros for installing Python and generating python or pip commands #}
 
+{# Generates a RUN command to install one or more Python versions with uv
+
+:param versions: A list of Python versions to install, e.g. ["3.11", "3.12"].
+#}
+{% macro run_uv_python_install(versions) %}
+{%- if versions is string -%}
+{%- set versions = versions | split(",") | map('trim') -%}
+{%- endif -%}
+RUN uv python install {{ versions | join(' ') }}
+{%- endmacro %}
+
+{# Normalizes Python installation paths for one or more Python versions with uv
+
+:param versions: A list of Python versions to install, e.g. ["3.11", "3.12"].
+#}
+{% macro run_normalize_uv_python_paths(versions) %}
+{%- if versions is string -%}
+{%- set versions = versions | split(",") | map('trim') -%}
+{%- endif -%}
+{% for version in versions -%}
+{% if loop.first %}RUN {% endif %}mv /opt/python/cpython-{{ version }}-linux-*/ /opt/python/{{ version }}{% if not loop.last %} && \{% endif %}
+{%- endfor %}
+{%- endmacro %}
+
 {# Adds a build stage to build one ore more Python versions using uv
 
 :param versions: A list of Python versions to build, e.g. ["3.11", "3.12"].
@@ -13,22 +37,8 @@ FROM ghcr.io/astral-sh/uv:bookworm-slim AS python-builder
 ENV UV_COMPILE_BYTECODE=1 UV_LINK_MODE=copy
 ENV UV_PYTHON_INSTALL_DIR=/opt/python
 ENV UV_PYTHON_PREFERENCE=only-managed
-RUN uv python install {{ versions | join(' ') }}
-{%- endmacro %}
-
-{# Set the appropriate PYTHONARCH environment variable based on the TARGETARCH for use with uv
-
-:return: A command to set the PYTHONARCH environment variable
-#}
-{% macro set_arch() -%}
-if [ "$TARGETARCH" = "amd64" ]; then \
-    export PYTHONARCH="x86_64"; \
-elif [ "$TARGETARCH" = "arm64" ]; then \
-    export PYTHONARCH="aarch64"; \
-else \
-    echo "Unsupported TARGETARCH: $TARGETARCH" >&2; \
-    exit 1; \
-fi
+{{ run_uv_python_install(versions) }}
+{{ run_normalize_uv_python_paths(versions) }}
 {%- endmacro %}
 
 {# Retrieve the expected version directory for a version of Python built and installed using uv
@@ -37,7 +47,7 @@ fi
 :return: The expected installation directory for that version
 #}
 {% macro get_version_directory(version) -%}
-/opt/python/cpython-{{ version }}-linux-${PYTHONARCH}-gnu
+/opt/python/{{ version }}
 {%- endmacro %}
 
 {# Arguments to copy Python installations from a uv build stage to the current build stage
@@ -105,8 +115,7 @@ rm -f {{ requirements_files | map('trim') | join(' ') }}
 {%- set versions = versions | split(",") -%}
 {%- endif -%}
 {% for version in versions -%}
-RUN {{ set_arch() | indent(4) }} && \
-    {{ install_packages(version | trim, packages, requirements_file, clean, break_system_packages) | indent(4) }}
+RUN {{ install_packages(version | trim, packages, requirements_file, clean, break_system_packages) | indent(4) }}
 {%- if not loop.last %}{# Handles whitespace for next RUN line if present #}
 {% endif %}
 {%- endfor %}
