--- a/posit-bakery/posit_bakery/config/templating/macros/python.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/python.j2
@@ -4,7 +4,7 @@
 
 :param versions: A list of Python versions to install, e.g. ["3.11", "3.12"].
 #}
-{% macro run_uv_python_install(versions) %}
+{% macro run_uv_python_install(versions) -%}
 {%- if versions is string -%}
 {%- set versions = versions | split(",") | map('trim') -%}
 {%- endif -%}
@@ -15,13 +15,13 @@ RUN uv python install {{ versions | join(' ') }}
 
 :param versions: A list of Python versions to install, e.g. ["3.11", "3.12"].
 #}
-{% macro run_normalize_uv_python_paths(versions) %}
+{% macro run_normalize_uv_python_paths(versions) -%}
 {%- if versions is string -%}
 {%- set versions = versions | split(",") | map('trim') -%}
 {%- endif -%}
 {% for version in versions -%}
 {% if loop.first %}RUN {% endif %}mv /opt/python/cpython-{{ version }}-linux-*/ /opt/python/{{ version }}{% if not loop.last %} && \{% endif %}
-{%- endfor %}
+{% endfor -%}
 {%- endmacro %}
 
 {# Adds a build stage to build one ore more Python versions using uv
@@ -30,7 +30,7 @@ RUN uv python install {{ versions | join(' ') }}
 #}
 {% macro build_stage(versions) -%}
 {%- if versions is string -%}
-{%- set versions = versions | split(",") | map('trim') -%}
+{%- set versions = versions | split(",") | map('trim') | list -%}
 {%- endif -%}
 FROM ghcr.io/astral-sh/uv:bookworm-slim AS python-builder
 
@@ -38,7 +38,7 @@ ENV UV_COMPILE_BYTECODE=1 UV_LINK_MODE=copy
 ENV UV_PYTHON_INSTALL_DIR=/opt/python
 ENV UV_PYTHON_PREFERENCE=only-managed
 {{ run_uv_python_install(versions) }}
-{{ run_normalize_uv_python_paths(versions) }}
+{{ run_normalize_uv_python_paths(versions) | indent(4) }}
 {%- endmacro %}
 
 {# Retrieve the expected version directory for a version of Python built and installed using uv
