Set global variable for build arg name defaults

--- a/posit-bakery/posit_bakery/config/templating/macros/python.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/python.j2
@@ -1,12 +1,14 @@
 {# Macros for installing Python and generating python or pip commands #}
 
+{%- set _BUILD_ARG_NAME = "PYTHON_VERSION" -%}
+
 {# Declare a generic build argument for a Python version #}
-{% macro declare_build_arg(name = "PYTHON_VERSION", default = "") -%}
+{% macro declare_build_arg(name = _BUILD_ARG_NAME, default = "") -%}
 ARG {{ name }}{% if default %}={{ default }}{% endif %}
 {%- endmacro %}
 
 {# Reference the build argument for a Python version #}
-{% macro build_arg(name = "PYTHON_VERSION") -%}
+{% macro build_arg(name = _BUILD_ARG_NAME) -%}
 ${{ name }}
 {%- endmacro %}
 
