--- a/posit-bakery/posit_bakery/config/templating/macros/r.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/r.j2
@@ -1,12 +1,14 @@
 {# Macros for installing R and installing packages to R installations #}
 
+{%- set _BUILD_ARG_NAME = "R_VERSION" -%}
+
 {# Declare a generic build argument for an R version #}
-{% macro declare_build_arg(name = "R_VERSION", default = "") -%}
+{% macro declare_build_arg(name = _BUILD_ARG_NAME, default = "") -%}
 ARG {{ name }}{% if default %}={{ default }}{% endif %}
 {%- endmacro %}
 
 {# Reference the build argument for an R version #}
-{% macro build_arg(name = "R_VERSION") -%}
+{% macro build_arg(name = _BUILD_ARG_NAME) -%}
 ${{ name }}
 {%- endmacro %}
 
