--- a/posit-bakery/posit_bakery/config/templating/macros/quarto.j2
+++ b/posit-bakery/posit_bakery/config/templating/macros/quarto.j2
@@ -1,5 +1,17 @@
 {# Macros for installing and managing Quarto #}
 
+{%- set _BUILD_ARG_NAME = "QUARTO_VERSION" -%}
+
+{# Declare a generic build argument for a Quarto version #}
+{% macro declare_build_arg(name = _BUILD_ARG_NAME, default = "") -%}
+ARG {{ name }}{% if default %}={{ default }}{% endif %}
+{%- endmacro %}
+
+{# Reference the build argument for a Quarto version #}
+{% macro build_arg(name = _BUILD_ARG_NAME) -%}
+${{ name }}
+{%- endmacro %}
+
 {# The directory for an installed version of Quarto
 
 :param version: The Quarto version, e.g. "1.8.24"
