--- a/posit-bakery/test/resources/matrix/test-matrix/template/test/goss.yaml.jinja2
+++ b/posit-bakery/test/resources/matrix/test-matrix/template/test/goss.yaml.jinja2
@@ -1,3 +1,4 @@
+{%- import "goss.j2" as goss -%}
 {%- import "python.j2" as python -%}
 {%- import "quarto.j2" as quarto -%}
 {%- import "r.j2" as r -%}
@@ -10,12 +11,12 @@ package:
   git:
     installed: true
 file:
-  python-{% raw %}{{ .Env.PYTHON_VERSION }}{% endraw %}:
+  python-{{ goss.build_arg_env_var("PYTHON_VERSION") }}:
     exists: true
-    path: {{ python.get_version_directory("{{ .Env.PYTHON_VERSION }}") }}
-  r-{% raw %}{{ .Env.R_VERSION }}{% endraw %}:
+    path: {{ python.get_version_directory(goss.build_arg_env_var("PYTHON_VERSION")) }}
+  r-{{ goss.build_arg_env_var("R_VERSION") }}:
     exists: true
-    path: {{ r.get_version_directory("{{ .Env.R_VERSION }}") }}
-  quarto-{% raw %}{{ .Env.QUARTO_VERSION }}{% endraw %}:
+    path: {{ r.get_version_directory(goss.build_arg_env_var("R_VERSION")) }}
+  quarto-{{ goss.build_arg_env_var("QUARTO_VERSION") }}:
     exists: true
-    path: {{ quarto.get_version_directory("{{ .Env.QUARTO_VERSION }}") }}
+    path: {{ quarto.get_version_directory(goss.build_arg_env_var("QUARTO_VERSION")) }}
